--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@iconify-json/mingcute": "^1.1.16",
     "@iconify/tailwind": "^0.1.4",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/chrome": "^0.0.263",
+    "@types/node": "^20.11.30",
     "@types/sanitize-html": "^2.9.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
